unpackaged/main/default/objects/FS_Sponsoring_Community_Groups__c/FS_Sponsoring_Community_Groups__c.object-meta.xml
<CustomObject>
    <label>Sponsoring Community Group</label>
    <nameField>
        <displayFormat>SCG{00000}</displayFormat>
        <label>Sponsoring Community Group ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsoring Community Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>