unpackaged/main/default/objects/FS_Sponsoring_Community_Groups__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Sponsoring Community Group</relationshipLabel>
    <relationshipName>Sponsoring_Community_Group</relationshipName>
    <type>Lookup</type>
</CustomField>