unpackaged/main/default/objects/FS_Sponsoring_Community_Groups__c/fields/FS_Community_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Community_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Community Group sponsoring the event</inlineHelpText>
    <label>Community Group</label>
    <referenceTo>PagesApi__Community_Group__c</referenceTo>
    <relationshipLabel>Sponsoring Community Group</relationshipLabel>
    <relationshipName>Sponsoring_Community_Group</relationshipName>
    <type>Lookup</type>
</CustomField>