unpackaged/main/default/objects/FS_Sponsoring_Community_Groups__c/fields/FS_Primary_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>FS_Primary_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the community group is a primary sponsor for the event</inlineHelpText>
    <label>Primary Sponsor</label>
    <type>Checkbox</type>
</CustomField>