unpackaged/main/default/objects/FS_Sponsoring_Community_Groups__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FS_Community_Group__c</columns>
    <columns>Event__c</columns>
    <columns>NAME</columns>
    <columns>FS_Primary_Sponsor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>